src/objects/Survey_Instance__c.object
<CustomObject>
    <fields>
        <fullName>Entity_Id__c</fullName>
        <label>Entity Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_Id__c</fullName>
        <label>Instance Id</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Id__c</fullName>
        <label>Survey Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Survey Instance</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>